--- a/report/final_report.tex
+++ b/report/final_report.tex
@@ -49,24 +49,21 @@ In this report I analyze the performance and correctness of my neural network. M
 
 \section{Implementation 1}
 
-My first correct implementation laid a sound foundation to build on. This implementation established the pattern of communication between MPI nodes and between CPU and GPU. For each batch the training set data is divided among MPI nodes. On each node the training data and the current set of network coefficients is copied to the GPU at the beginning of the feed-forward process. The data remains on the GEMM kernels for all feed-forward and backpropagation steps  uses "naive" gpu kernels to perform calculations, with each process being launched by 
+My first correct implementation laid a sound foundation to build on. This implementation established the pattern of communication between MPI nodes and between CPU and GPU. For each batch the training set data is divided among MPI nodes. On each node the training data and the current set of network coefficients is copied to the GPU at the beginning of the feed-forward process. The data remains on the GEMM kernels for all feed-forward and backpropagation steps. The computed gradients are then copied back to the CPU on each MPI node. The gradients are summed on each MPI node and then used to update the network coefficients, so each MPI node has an identical set of network coefficients. The structure of communications described above is fast because it minimizes the amount of data transferred between CPU and GPU using cudaMemcpy and also minimizes the amount of data transferred between MPI nodes .
 
-\begin{figure}[htb]
-	\begin{center}
-		\includegraphics[width=.7\linewidth]{fig/pie_chart.png}
-		\caption{Relative contribution of top three processes to computation time.}
-		\label{fig:pie}
-	\end{center}
-\end{figure}
+This implementation uses very simple GEMM kernels, with each entry in the result matrix being computed by an indvidual thread and each thread loading all data needed for the calculation from global memory. Profiling the implementation unsurprisingly shows that 99\% of the compute time is spent in the GEMM kernels (Figure~\ref{fig:screenshot1}). The GEMM kernels are slow because each thread is performing many uncoalesced reads from global memory. A first step to reducing compute time would be to leverage shared memory to reduce reads from global memory.
 
 \begin{figure}[htb]
 	\begin{center}
 		\includegraphics[width=\linewidth]{fig/screenshot1.png}
 		\caption{NVVP visualization of run chonology for Implementation 1.}
-		\label{fig:screenshot}
+		\label{fig:screenshot1}
 	\end{center}
 \end{figure}
-\FloatBarrier
+
+\section{Implementation 2}
+
+This implementation features an improved GEMM kernel that loads square blocks of data from the input matrices into shared memory. Each thread still computes a single value in the result matrix. The data in shared memory is used by a thread block to update the result in 
 
 \section{Correctness Analysis}
 
